--- a/views/dash_layout.erb
+++ b/views/dash_layout.erb
@@ -1,3 +1,70 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+ <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Geo Blog</title>
+</head>
 
-<%= yield %>
+<body class="grey lighten-4">
+  <nav class="blue darken-2">
+    <div class="container">
+      <div class="nav-wrapper">
+        <a href="index.html" class="brand-logo">Geo Blog</a>
+        <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
+          <i class="material-icons">menu</i>
+        </a>
+        <ul class="right hide-on-med-and-down">
+          <li>
+            <a href="/dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a href="/posts">Posts</a>
+          </li>
+          <li class="active">
+            <a href="/comments">Comments</a>
+          </li>
+          <li>
+            <a href="/users">Users</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <%= yield %>
+
+  <footer class="section blue darken-2 white-text center">
+    <p>GeoBlog Panel Copyright &copy; 2018</p>
+  </footer>
+  
+   <!--Import jQuery before materialize.js-->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>          
+  <script src="main.js"></script>
+  <script>
+    // Hide Sections
+    $('.section').hide();
+
+    setTimeout(function () {
+      $(document).ready(function () {
+        // Show sections
+        $('.section').fadeIn();
+
+        // Hide preloader
+        $('.loader').fadeOut();
+
+      });
+    }, 1000);
+  </script>
+  
+</body>
+
+</html>
