--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -1,1 +1,39 @@
-my main page with pictures
+
+<section class="section-gallery">
+  <div class="container">
+    <div class="row">
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img" src="/images/image1.jpeg" alt="">
+      </div>
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img" src="/images/image4.jpeg" alt="">
+      </div>
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img" src="/images/image3.jpeg" alt="">
+      </div>
+    </div>
+    <%# row2 %>
+    <div class="row">
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img" src="/images/image2.jpeg" alt="">
+      </div>
+      <div class="col s12 m4">
+        <h2>Geo Blog</h2>
+      </div>
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img" src="/images/image5.jpeg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img"  src="/images/image6.jpeg" alt="">
+      </div>
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img"  src="/images/image7.jpeg" alt="">
+      </div>
+      <div class="col s12 m4">
+        <img class="materialboxed responsive-img"  src="/images/image8.jpeg" alt="">
+      </div>
+    </div>
+  </div>
+</section>
