signup, login, logout works, posts and my-posts pages also work as well as users

--- a/views/dash_layout.erb
+++ b/views/dash_layout.erb
@@ -25,13 +25,10 @@
             <a href="/dashboard">Dashboard</a>
           </li>
           <li>
-            <a href="/posts">Posts</a>
+            <a href="/signup">SignUp</a>
           </li>
           <li class="active">
-            <a href="/comments">Comments</a>
-          </li>
-          <li>
-            <a href="/users">Users</a>
+            <a href="/login">LogIn</a>
           </li>
         </ul>
       </div>
