--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,4 +1,3 @@
-<!-- Section: Details -->
 <section class="section section-details grey lighten-4">
   <div class="container">
     <div class="row">
@@ -7,31 +6,30 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m6">
-                <span class="card-title">Post Details</span>
+                <span class="card-title">My Page</span>
               </div>
               <div class="col s12 m6 center">
                 <img src="img/person1.jpg" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
-                <p>Posted By John Doe</p>
-                <p>On Jan, 12, 2018</p>
+                <p><%= @current_user.first_name %></p>
+            
               </div>
             </div>
-
+        <% @posts.each do |post|%>
             <form>
               <div class="input-field">
-                <input type="text" id="title" value="Post One">
+                <input type="text" id="title" value="<%= post.title %>">
                 <label for="title">Title</label>
               </div>
               <div class="input-field">
                 <textarea name="body" id="body" class="materialize-textarea">
-                    This is the content for post one
+                    <%= post.content %>
                   </textarea>
               </div>
             </form>
-
+        <% end %>
           </div>
           <div class="card-action">
-            <button class="btn green">Save</button>
-            <button class="btn red">Delete</button>
+            <button type="submit" class="btn green"><a href="/new_post"> Comment</a></button>
           </div>
         </div>
       </div>
