--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,6 +14,19 @@
 </head>
 
 <body class="grey lighten-4">
+  <ul id="dropdown1" class="dropdown-content">
+    <li>
+      <a href="/my_posts">My posts</a>
+    </li>
+    <li>
+      <a href="/posts">All posts</a>
+    </li>
+    <li>
+      <a href="/new_post">Create new</a>
+    </li>
+
+  </ul>
+
   <nav class="blue darken-2">
     <div class="container">
       <div class="nav-wrapper">
@@ -26,7 +39,8 @@
             <a href="/dashboard">Dashboard</a>
           </li>
           <li>
-            <a href="/posts">Posts</a>
+            <a class="dropdown-trigger" href="#!" data-target="dropdown1">Posts<i class="material-icons right">arrow_drop_down</i>
+            </a>
           </li>
           <li class="active">
             <a href="/comments">Comments</a>
@@ -34,51 +48,10 @@
           <li>
             <a href="/users">Users</a>
           </li>
+          <li>
+            <a href="/logout">LogOut</a>
+          </li>
         </ul>
-        <!-- Side nav -->
-        <%# <ul id="side-nav" class="side-nav">
-          <li>
-            <div class="user-view">
-              <div class="background">
-                <img src="img/ocean.jpg" alt="">
-              </div>
-              <a href="#">
-                <img src="img/person1.jpg" alt="" class="circle">
-              </a>
-              <a href="#">
-                <span class="name white-text">John Doe</span>
-              </a>
-              <a href="#">
-                <span class="email white-text">jdoe@gmail.com</span>
-              </a>
-            </div>
-          </li>
-          <li>
-            <a href="index.html">
-              <i class="material-icons">dashboard</i> Dashboard</a>
-          </li>
-          <li>
-            <a href="posts.html">Dashboard</a>
-          </li>
-          <li>
-            <a href="categories.html">Posts</a>
-          </li>
-          <li>
-            <a href="comments.html">Comments</a>
-          </li>
-          <li>
-            <a href="users.html">Users</a>
-          </li>
-          <li>
-            <div class="divider"></div>
-          </li>
-          <li>
-            <a class="subheader">Account Controls</a>
-          </li>
-          <li>
-            <a href="login.html" class="waves-effect">Logout</a>
-          </li>
-        </ul> %>
       </div>
     </div>
   </nav>
@@ -111,6 +84,7 @@
 
       });
     }, 1000);
+    $(".dropdown-trigger").dropdown();
   </script>
   
 </body>
