added hover action to nav buttons and a picture to posts and column for pics to users-table

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,26 +31,26 @@
   <nav class="blue darken-2">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Geo Blog</a>
+        <a href="/posts" class="brand-logo">Geo Blog</a>
         <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <a href="/dashboard">Dashboard</a>
+            <a class="nav-btns" href="/dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="dropdown-trigger" href="#!" data-target="dropdown1">Posts<i class="material-icons right">arrow_drop_down</i>
+            <a class="dropdown-trigger nav-btns" href="#!" data-target="dropdown1">Posts<i class="material-icons right">arrow_drop_down</i>
             </a>
           </li>
-          <li class="active">
-            <a href="/comments">Comments</a>
+          <li>
+            <a class="nav-btns" href="/comments">Comments</a>
           </li>
           <li>
-            <a href="/users">Users</a>
+            <a class="nav-btns" href="/users">Users</a>
           </li>
           <li>
-            <a href="/logout">LogOut</a>
+            <a class="nav-btns" href="/logout">LogOut</a>
           </li>
         </ul>
       </div>
