--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,26 @@
 #author {
   background-color: rgb(171, 229, 248);
-  color: rgb(7, 95, 36);
+  color: rgb(13, 7, 104);
 }
 
 #title {
-  color: rgb(243, 96, 42);
+  color: rgb(13, 6, 104);
+}
+
+.nav-btns {
+  text-decoration: none;
+  transition: all .4s ease-out;
+  padding: 3px;
+  background: linear-gradient(to bottom,
+    rgba(181, 255, 255, 0) 0%,
+    rgba(181, 255, 255, 0) 50%,
+    rgb(181, 219, 255, 1) 50%,
+    rgb(181, 219, 255, 1) 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 200%;
+  width: 7vw;
+}
+
+.nav-btns:hover {
+  background-position: 0 100%;
 }
