--- a/views/dash_layout.erb
+++ b/views/dash_layout.erb
@@ -9,6 +9,7 @@
   
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="/main.css">
   <title>Geo Blog</title>
 </head>
 
@@ -16,19 +17,19 @@
   <nav class="blue darken-2">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="index.html" class="brand-logo">Geo Blog</a>
+        <a href="/signup" class="brand-logo nav-btns">Geo Blog</a>
         <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
           <li>
-            <a href="/dashboard">Dashboard</a>
+            <a class="nav-btns" href="/dashboard">Dashboard</a>
           </li>
           <li>
-            <a href="/signup">SignUp</a>
+            <a class="nav-btns" href="/signup">SignUp</a>
           </li>
-          <li class="active">
-            <a href="/login">LogIn</a>
+          <li>
+            <a class="nav-btns" href="/login">LogIn</a>
           </li>
         </ul>
       </div>
