fixed layouts worked on individual users' pages and delete user, not working yet

--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -18,7 +18,8 @@
         <img class="materialboxed responsive-img" src="/images/image2.jpeg" alt="">
       </div>
       <div class="col s12 m4">
-        <h2>Geo Blog</h2>
+        <h2 id="geo">Geo Blog</h2>
+        <h6 id="geo-blog">an interesting platform for all the geography lovers to voice their opinion</h6>
       </div>
       <div class="col s12 m4">
         <img class="materialboxed responsive-img" src="/images/image5.jpeg" alt="">
