--- a/views/my_posts.erb
+++ b/views/my_posts.erb
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div class="card-action">
-            <button class="btn red">Delete</button>
+            <a href="/dashboard"> <button action="delete" class="btn red">Delete</button></a>
           </div>
         </div>
       </div>
