--- a/public/main.css
+++ b/public/main.css
@@ -9,11 +9,11 @@
 
 .nav-btns {
   text-decoration: none;
-  transition: all .4s ease-out;
+  transition: all .5s cubic-bezier(1, .3, .1, 1.08);
   padding: 3px;
   background: linear-gradient(to bottom,
-    rgba(181, 255, 255, 0) 0%,
-    rgba(181, 255, 255, 0) 50%,
+    rgba(17, 46, 17, 0) 0%,
+    rgba(8, 59, 8, 0) 50%,
     rgb(181, 219, 255, 1) 50%,
     rgb(181, 219, 255, 1) 100%);
   background-repeat: no-repeat;
@@ -23,4 +23,15 @@
 
 .nav-btns:hover {
   background-position: 0 100%;
+  color: black;
+  font-weight: bold;
+}
+
+#geo {
+  font-family: 'Unlock', cursive;
+  color: rgb(15, 51, 15);
+}
+
+#geo-blog {
+  color: rgb(27, 71, 27);
 }
