--- a/views/dash_layout.erb
+++ b/views/dash_layout.erb
@@ -9,6 +9,7 @@
   
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css?family=Unlock" rel="stylesheet">
   <link rel="stylesheet" href="/main.css">
   <title>Geo Blog</title>
 </head>
@@ -17,9 +18,8 @@
   <nav class="blue darken-2">
     <div class="container">
       <div class="nav-wrapper">
-        <a href="/signup" class="brand-logo nav-btns">Geo Blog</a>
-        <a href="#" data-activates="side-nav" class="button-collapse show-on-large right">
-          <i class="material-icons">menu</i>
+        <a href="/signup" class="brand-logo">Geo Blog</a>
+
         </a>
         <ul class="right hide-on-med-and-down">
           <li>
