--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -6,12 +6,12 @@
     </div>
     <div class="input-field">
       <textarea name="content" id="content" class="materialize-textarea">
-          Content of your post here
-        </textarea>
+      
+      </textarea>
     </div>
     <div class="card-action">
       <button type="submit" class="btn green">Save</button>
-      <button type="submit" class="btn red">Cancel</button>
+      <a href="/posts"> <button  class="btn red">Cancel</button></a>
     </div>
   </form>
 </div>
