--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -19,12 +19,13 @@
       </div>
       <div class="col s12 m4">
         <h2 id="geo">Geo Blog</h2>
-        <h6 id="geo-blog">an interesting platform for all the geography lovers to voice their opinion</h6>
+        <h6 id="geo-blog">an interesting platform for all the geography lovers to voice their opinions</h6>
       </div>
       <div class="col s12 m4">
         <img class="materialboxed responsive-img" src="/images/image5.jpeg" alt="">
       </div>
     </div>
+    <%# row3 %>
     <div class="row">
       <div class="col s12 m4">
         <img class="materialboxed responsive-img"  src="/images/image6.jpeg" alt="">
