not sure, delete post, profile and comments still don't work

--- a/views/comments.erb
+++ b/views/comments.erb
@@ -9,7 +9,7 @@
             <table class="striped">
               <tbody>
                 <tr>
-                <% comment.each do |c| %>
+                <% @comments.each do |c| %>
                   <td width="70">
                     <%# <img src="<%= @user_pics.pics %>" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;"> %>
                   </td>
