--- a/views/my_posts.erb
+++ b/views/my_posts.erb
@@ -15,7 +15,7 @@
                   <h4><%= post.title.capitalize %></h4>
                   <p><%= post.content %></p> 
                   <a href="/my_posts"> 
-                  <button action="delete" class="btn red">Delete</button>
+                  <button id="<%= post.id %>" action="delete" class="btn red">Delete</button>
                   </a>
                 </div>
               </div>
