--- a/views/posts.erb
+++ b/views/posts.erb
@@ -29,7 +29,7 @@
                     <input type="text" id="title" value="<%= post.user.first_name %>">
                     <div class="card-action">
                       <a href="/new_comments"> 
-                      <button action="get" class="btn green darken-3">Add New Comment</button>
+                      <button class="btn green darken-3">Add New Comment</button>
                       </a>
                       <input type="hidden" name = "post_id" value = "<%= post.id %>">
                     </div>
