--- a/views/users.erb
+++ b/views/users.erb
@@ -23,9 +23,20 @@
                     <td width="70">
                       <img src="#" alt="" class="responsive-img circle" style="width: 40px;margin-left:10px;">
                     </td>
-                    <td><a href="/profile/<%= user.id %>"> <%= user.first_name %></a></td>
-                    <td><a href="/profile/<%= user.id %>"><%= user.email %></a></td>
-                    <td><%= user.created_at.strftime("%d/%m/%Y") %></td>
+                    <td>
+                    <a href="/profile <%= user.id %>"> <%= user.first_name %>
+                    </a>
+                    </td>
+                    <td>
+                    <a href="/profile <%= user.id %>"> <%= user.last_name %>
+                    </a>
+                    </td>
+                    <td>
+                    <a href="/profile <%= user.id %>"><%= user.email %>
+                    </a>
+                    </td>
+                    <td><%= user.created_at.strftime("%d/%m/%Y") %>
+                    </td>
                   </tr>
                 </tbody>
                 <% end %>
