worked on deleting user, no luck

--- a/views/dash_layout.erb
+++ b/views/dash_layout.erb
@@ -36,7 +36,7 @@
     </div>
   </nav>
 
- 
+ <%# <%= yield %> %>
 
   <footer class="section blue darken-2 white-text center">
     <p>GeoBlog Panel Copyright &copy; 2018</p>
