--- a/views/new_post.erb
+++ b/views/new_post.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="card-action">
         <button type="submit" class="btn green darken-3">Save</button>
-        <a href="/posts"> 
+        <a href="/my_posts"> 
         <button  class="btn red">Cancel</button>
         </a>
       </div>
