--- a/public/main.css
+++ b/public/main.css
@@ -18,8 +18,8 @@
   background: linear-gradient(to bottom,
     rgba(17, 46, 17, 0) 0%,
     rgba(8, 59, 8, 0) 50%,
-    rgb(181, 219, 255, 1) 50%,
-    rgb(181, 219, 255, 1) 100%);
+    rgb(35, 57, 95) 50%,
+    rgb(17, 56, 94) 100%);
   background-repeat: no-repeat;
   background-size: 100% 200%;
   width: 7vw;
