--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,8 @@
+body {
+  height: 100%;
+  width: 100%;
+}
+
 .section-details {
   min-height: 500px;
 }
@@ -18,10 +23,11 @@
   background: linear-gradient(to bottom,
     rgba(17, 46, 17, 0) 0%,
     rgba(8, 59, 8, 0) 50%,
-    rgb(35, 57, 95) 50%,
-    rgb(17, 56, 94) 100%);
+    rgb(59, 96, 160) 50%,
+    rgb(51, 82, 138) 100%);
   background-repeat: no-repeat;
   background-size: 100% 200%;
+
   width: 7vw;
 }
 
@@ -29,6 +35,7 @@
   background-position: 0 100%;
   color: black;
   font-weight: bold;
+  color: white;
 }
 
 #geo {
