--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,27 +1,45 @@
+
+
 <div class="row">
   <div class="col s12 m7">
     <div class="card">
       <div class="card-image">
         <img src="images/sample-1.jpg">
         <span class="card-title">Profile</span>
-      </div>
-      <div class="card-content">
-        <%= @specific_user.pics %>
-      </div>
-      <div>
-        <%= @specific_user.first_name %>
-      </div>
-      <div>
-        <%= @specific_user.last_name %>
-      </div>
-      <div>
-        <%= @specific_user.created_at.strftime("%d/%m/%Y") %>
-      </div>
-      <% if @specific_user == current_user then %>
-      <form action="/users/delete/<%= user.id %>" method="post">
-        <input class="btn red" type="submit" name="submit-delete-user" value="Delete account">
-      </form>
-    <% end %>
+        </div>
+          <table class="striped">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>User Name</th>
+                <th>Birth Date</th>
+                <th>Registered</th>   
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <%= @user.first_name.capitalize %>
+                </td>
+                <td>
+                  <%= @user.last_name.capitalize %>
+                </td>
+                <td>
+                  <%= @user.username %>
+                </td>
+                <td>
+                  <%= @user.birthday %>
+                </td>
+                <td>
+                  <%= @user.created_at.strftime("%d/%m/%Y") %>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div> 
+      <button class="btn red" action="delete/users/:id" class="btn red" method="post">Delete>
+      </button>
     </div>
   </div>
 </div>
