--- a/views/my_posts.erb
+++ b/views/my_posts.erb
@@ -15,7 +15,9 @@
                   <h4><%= post.title.capitalize %></h4>
                   <p><%= post.content %></p> 
                   <a href="/my_posts"> 
-                  <button id="<%= post.id %>" action="delete/posts/:id" class="btn red">Delete</button>
+                  <form class="btn red del-btn" id="<%= post.id %>" action="/delete_post" method="post">
+                    <input type="submit" value="Delete Post">
+                  </form>
                   </a>
                 </div>
               </div>
