--- a/views/users.erb
+++ b/views/users.erb
@@ -11,9 +11,11 @@
                 <thead>
                   <tr>
                     <th></th>
-                    <th>Name</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Birth Date</th>
                     <th>Email</th>
-                    <th>Registered</th>
+                    <th>Registered on</th>
                     <th></th>
                   </tr>
                 </thead>
@@ -31,17 +33,17 @@
                     <a href="/users/:id <%= user.id %>"> <%= user.last_name %>
                     </a>
                     </td>
+                      <td>
+                    <a href="/users/:id <%= user.id %>"><%= user.birthday %>
+                    </a>
+                    </td>
                     <td>
                     <a href="/users/:id <%= user.id %>"><%= user.email %>
                     </a>
                     </td>
                     <td><%= user.created_at.strftime("%d/%m/%Y") %>
                     </td>
-                    <td>
-                   
-                    <button id="<%= @current_user %>" action="users/delete" method="get" class="btn red">Delete</button>
-                    
-                    </td>
+          
                   </tr>
                 </tbody>
                 <% end %>
